@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //  
-//  Copyright (c) 2011, John Haddon. All rights reserved.
+//  Copyright (c) 2011-2012, John Haddon. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -61,7 +61,7 @@ class NumericPlug : public ValuePlug
 			T defaultValue = T(),
 			T minValue = Imath::limits<T>::min(),
 			T maxValue = Imath::limits<T>::max(),
-			unsigned flags = None
+			unsigned flags = Default
 		);
 		virtual ~NumericPlug();
 
