@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //  
-//  Copyright (c) 2011, John Haddon. All rights reserved.
+//  Copyright (c) 2011-2012, John Haddon. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -64,7 +64,7 @@ class SplinePlug : public CompoundPlug
 			const std::string &name = staticTypeName(),
 			Direction direction=In,
 			const T &defaultValue = T(),
-			unsigned flags = None
+			unsigned flags = Default
 		);
 		virtual ~SplinePlug();
 
