@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //  
-//  Copyright (c) 2011, John Haddon. All rights reserved.
+//  Copyright (c) 2011-2012, John Haddon. All rights reserved.
 //  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
@@ -77,7 +77,7 @@ static std::string serialise( Serialiser &s, ConstGraphComponentPtr g )
 		result += "maxValue = " + boost::lexical_cast<std::string>( plug->maxValue() ) + ", ";
 	}
 	
-	if( plug->getFlags() )
+	if( plug->getFlags() != Plug::Default )
 	{
 		result += "flags = " + serialisePlugFlags( plug->getFlags() ) + ", ";
 	}
@@ -151,7 +151,7 @@ static void bind()
 					boost::python::arg_( "defaultValue" )=V(),
 					boost::python::arg_( "minValue" )=Imath::limits<V>::min(),
 					boost::python::arg_( "maxValue" )=Imath::limits<V>::max(),
-					boost::python::arg_( "flags" )=Plug::None,
+					boost::python::arg_( "flags" )=Plug::Default,
 					boost::python::arg_( "input" )=PlugPtr( 0 ),
 					boost::python::arg_( "value" )=object()
 				)
